--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -18,20 +18,25 @@ form {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 label {
     display: block;
     margin-bottom: 8px;
     font-weight: bold;
+    text-align: left;
 }
 
 input[type="number"] {
-    width: 100%;
+    width: calc(100% - 20px);
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 button {
